--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <title>Інтернет-магазин DEKOP ➤ Меблі від українського виробника</title>
 
   <!-- For favicon png -->
-  <link rel="shortcut icon" type="image/icon" href="./favicon.png" />
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 
   <!--font-awesome.min.css-->
   <link rel="stylesheet" href="../src/css/font-awesome.min.css">
